feat(api): implemented flight APIs
